--- a/templates/email-verify-account.ejs
+++ b/templates/email-verify-account.ejs
@@ -33,7 +33,7 @@
 
   <p style="text-align: center">
     <span style="font-family: Arial, Helvetica, sans-serif"><span style="font-size: 16px">Note: The code will expire in
-        <%= otpLife %>
+        <%= tokenLife %>
       </span></span>
   </p>
 </body>
