--- a/templates/email-verify-account.ejs
+++ b/templates/email-verify-account.ejs
@@ -27,7 +27,7 @@
 
   <p style="text-align: center">
     <span style="font-family: Arial, Helvetica, sans-serif"><span style="font-size: 28px"><strong>
-          <%= otp %>
+          <%= token %>
         </strong></span></span>
   </p>
 
