feat: reset password

--- a/templates/email-reset-password.ejs
+++ b/templates/email-reset-password.ejs
@@ -14,7 +14,7 @@
 <p style="text-align: center">
   <span style="font-family: Arial, Helvetica, sans-serif"
     ><span style="font-size: 20px"
-      ><strong>Please Verify Your Email Address.</strong></span
+      ><strong>Please confirm your password reset.</strong></span
     ></span
   >
 </p>
@@ -22,7 +22,7 @@
 <p style="text-align: center">
   <span style="font-family: Arial, Helvetica, sans-serif"
     ><span style="font-size: 16px"
-      >Use the code below to finish the registration for your account.
+      >Use the code below to reset your password.
     </span></span
   >
 </p>
